updated alignment issues

--- a/css/all.css
+++ b/css/all.css
@@ -78,6 +78,9 @@ ul li a {
     color:#333
 }
 /*nav----------------------------------------------------------------*/
+header{
+    position:fixed;
+}
 nav{
     width: 100vw;
     background-color: #333;
@@ -86,6 +89,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     overflow: hidden;
+    position: sticky ;
    
 
 }
@@ -103,8 +107,9 @@ nav ul li a:hover{
 }
 .main_container{
     display: grid;
-    grid-template-rows: 100vh 60vh 165vh 382px;
+    grid-template-rows: 100px 100vh 60vh 165vh 382px;
     grid-template-areas: 
+        "nav"
         "hero"
         "about"
         "feature"
@@ -281,7 +286,7 @@ footer{
 /* ABOUT PAGE----------------------------------------------------------*/
 .main_container-about{
     display: grid;
-    grid-template-rows:50vh 70vh 60vh 382px;
+    grid-template-rows: 50vh 100vh 60vh 382px;
     grid-template-areas: 
     "hero"
     "main"
@@ -290,6 +295,7 @@ footer{
 }
 .hero_about{
     display: grid;
+    grid-template-rows: 100px 1fr;
     grid-template-columns: repeat(12, 1fr);
 }
 .hero_about{
@@ -300,16 +306,17 @@ footer{
     color: whitesmoke;
     font-size:97px;
     grid-row: 1/2;
-    grid-column: 4/8;
+    grid-column: 3/8;
+    padding-top:100px ;
 }
 .about_main{
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 200px 110px 100px 50px 600px;
+    grid-template-rows: 220px 115px 100px 80px 25px 600px;
 }
 #aboutHeroImg{
     grid-column: 7/11;
-    grid-row: 1/2;
+    grid-row: 2/3;
     width:586px;
     justify-items: left;
 }
@@ -319,6 +326,7 @@ footer{
     justify-self:center;
     grid-column: 3/6;
     grid-row: 1/2;
+    text-align: center;
 }
 .about_main h2{
     grid-column: 3/7;
@@ -330,13 +338,13 @@ footer{
 }
 .about_main h4{
     justify-self: baseline;
-    grid-row: 4/5;
-    grid-column: 3/6;
+    grid-row: 5/6;
+    grid-column:3/6;
 }
 .about_info{
     width: 100%;
     grid-column: 3/9;
-    grid-row: 5/6;
+    grid-row: 6/7;
 }
 .about_info{
     font-size: 24px;
